@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST java-getopt-1.0.10.tar.gz 44090 RMD160 50fef74162db017a1a3a81946a5a0459fc399e73 SHA1 7a1e5f2de54e60363d6dfd9e75e4c15ce95205b2 SHA256 65df66c8bcd15afc947eabc216151b16f6919fe5366357b8a4c7a504e003fb70
+DIST java-getopt-1.0.13.tar.gz 45759 RMD160 58618dadb318e9a5fa8cb3c12d7b98a486427375 SHA1 575432a284b08b097f920bc5fe6b6c27c7f60d06 SHA256 106edfea5056112bc88bd3691b6b145d6f50aa3e8ad0bf0b4f23fffcf2c45975
 EBUILD java-getopt-1.0.10.ebuild 846 RMD160 fc6946220e77ff0dda7391167707ceeca91d260b SHA1 971084b39e457538ab7f66d10e0cc99b05b002b6 SHA256 8ea9a50a9b831e1f9859d1dff9991396d84b70bcba94d372691af7e13ed44abc
 MD5 a3ceb47a6b168dc486ebf1bc97663beb java-getopt-1.0.10.ebuild 846
 RMD160 fc6946220e77ff0dda7391167707ceeca91d260b java-getopt-1.0.10.ebuild 846
 SHA256 8ea9a50a9b831e1f9859d1dff9991396d84b70bcba94d372691af7e13ed44abc java-getopt-1.0.10.ebuild 846
-MISC ChangeLog 1416 RMD160 9e0f3b8d7f00f7386b495f6709c2a61d6c33cfa2 SHA1 ce616c69fe6a750e623f6ec483b77390877ed563 SHA256 720c53f4182b5cc91795b135e59a31909dffdb55ca2e87b4f4c1390cd456cdf0
-MD5 3a0ffcafadc11e4e7e32e42e7733ace7 ChangeLog 1416
-RMD160 9e0f3b8d7f00f7386b495f6709c2a61d6c33cfa2 ChangeLog 1416
-SHA256 720c53f4182b5cc91795b135e59a31909dffdb55ca2e87b4f4c1390cd456cdf0 ChangeLog 1416
+EBUILD java-getopt-1.0.13.ebuild 937 RMD160 f64b63f2aa45aedd701ae499b8bf7472166a4d81 SHA1 094cb5f2759882ade4310344592038be0e0d26fb SHA256 823e86f43d2be80a65e1be544d5f262d36ce3c0ac48fd4beb88c89b8794a0df0
+MD5 062ef7e37eb899dbe3daaaeb8622c290 java-getopt-1.0.13.ebuild 937
+RMD160 f64b63f2aa45aedd701ae499b8bf7472166a4d81 java-getopt-1.0.13.ebuild 937
+SHA256 823e86f43d2be80a65e1be544d5f262d36ce3c0ac48fd4beb88c89b8794a0df0 java-getopt-1.0.13.ebuild 937
+MISC ChangeLog 1658 RMD160 76f2809cb6ed046c2d2caf3428a927b57735cff5 SHA1 5783500eae85e1f7a30c623678ee0bcdd1e90d85 SHA256 3cf5ce569430fae02433fca8513644cdf417442a3980afc63908e627fdeef25e
+MD5 bb38e480f48a93be40256b97c7161091 ChangeLog 1658
+RMD160 76f2809cb6ed046c2d2caf3428a927b57735cff5 ChangeLog 1658
+SHA256 3cf5ce569430fae02433fca8513644cdf417442a3980afc63908e627fdeef25e ChangeLog 1658
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
@@ -17,10 +22,13 @@ SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata
 MD5 c38311917257839c8e100808e5d25130 files/digest-java-getopt-1.0.10 253
 RMD160 a88eea30f65f95fb847258a87dcfc32c08488c07 files/digest-java-getopt-1.0.10 253
 SHA256 2f8e0782b1d05816e1ec9ffa5a6ee4f2114fdba8efa21c809248e06e4f980f17 files/digest-java-getopt-1.0.10 253
+MD5 5eaf1f53a1f0c228391181a867a1e3fa files/digest-java-getopt-1.0.13 253
+RMD160 cdbaf30570efb3b1d2f21d0b54f8b7e3c04371dc files/digest-java-getopt-1.0.13 253
+SHA256 a7c71db9c9acf1a79805b08ffb2cc8e377d921fca0da613aafb3c14a3a48b625 files/digest-java-getopt-1.0.13 253
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFu+mhcxLzpIGCsLQRAm74AJ9Uvmd5qBaHoWEa5xSb9nGgWK42ZwCfc9k2
-Q2A9zmneKIIcgl19owLir1I=
-=2gjq
+iD8DBQFFvIjycxLzpIGCsLQRAo1TAJsHes9VX2RHm9ieZJtUySiGYezn4QCaA1rN
+8egBsKTSOvf70KnChfsB+FU=
+=DVU2
 -----END PGP SIGNATURE-----
