@@ -1,0 +1,3 @@
+MD5 46336d9bc055900f0320e5c378d7bfb2 java-getopt-1.0.13.tar.gz 45759
+RMD160 58618dadb318e9a5fa8cb3c12d7b98a486427375 java-getopt-1.0.13.tar.gz 45759
+SHA256 106edfea5056112bc88bd3691b6b145d6f50aa3e8ad0bf0b4f23fffcf2c45975 java-getopt-1.0.13.tar.gz 45759
