@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/java-getopt
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-getopt/ChangeLog,v 1.11 2007/01/28 00:08:55 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-getopt/ChangeLog,v 1.12 2007/01/28 11:28:40 betelgeuse Exp $
+
+*java-getopt-1.0.13 (28 Jan 2007)
+
+  28 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +java-getopt-1.0.13.ebuild:
+  Version bump using generation 2. Added doc and source use flags. Only
+  upstream changes are support for more languages.
 
   28 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
   -java-getopt-1.0.9.ebuild:
